[package]
name = "cythan-cli"
version = "0.1.0"
authors = ["ccgauche <gaucheron.laurent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
cythan = {git = "https://github.com/Cypooos/Cythan-v3#cfd832b"}
cythan-compiler = {git = "https://github.com/Cythan-Project/cythan-compiler#26d0194"}
compression = "*"
anyhow = "*"

[profile.release]
lto = true